--- a/src/Documentation/tutorial-components.html
+++ b/src/Documentation/tutorial-components.html
@@ -56,12 +56,12 @@
             <span class="icon-bar bar2"></span>
             <span class="icon-bar bar3"></span>
           </button>
-          <a href="https://www.creative-tim.com?ref=njsmk-static-docs" target="_blank">
+          <a href="https://github.com/lucasvma" target="_blank">
             <div class="logo-container">
               <div class="logo">
                 <img src="assets/img/new_logo.png" alt="Creative Tim Logo" />
               </div>
-              <div class="brand">Creative Tim</div>
+              <div class="brand">Lucas Ventura</div>
             </div>
           </a>
         </div>
@@ -72,7 +72,7 @@
               <a
                 href="https://demos.creative-tim.com/nextjs-material-kit/components?ref=njsmk-static-docs"
                 target="_blank"
-                >NextJS Material Kit</a
+                >Home</a
               >
             </li>
             <li>
@@ -170,7 +170,7 @@
           <script>
             document.write(new Date().getFullYear());
           </script>
-          Creative Tim, made with love
+          C made with
         </div>
       </div>
     </footer>
